--- a/weatherapp/src/styles/style.css
+++ b/weatherapp/src/styles/style.css
@@ -1,11 +1,14 @@
 body {
     margin: 0;
+    font-family: 'Franklin Gothic Medium', sans-serif;
 }
 
 .header {
     width: 100%;
     background-color: #204f68;
     color: white;
-    padding: 20px;
+    padding: 25px;
     text-align: center;
+    position: relative;
+    top: -21px;
 }
