adding capitalzation to city name in body

--- a/weatherapp/src/styles/body.css
+++ b/weatherapp/src/styles/body.css
@@ -1,5 +1,11 @@
-.forcast {
+.forecast {
     background-color: white;
+}
+
+.bodyHeader {
+    background-color: #204f68;
+    padding:15px;
+    color: white;
 }
  
 .low {
