--- a/weatherapp/src/styles/alignment.css
+++ b/weatherapp/src/styles/alignment.css
@@ -2,6 +2,8 @@
 
 .container{
     display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .oneThrid { 
@@ -9,8 +11,7 @@
     background-color:white;
     padding: 15px;
     width: 25%;
-    position: relative;
-    top: -43px;
+    margin-top: -43px;
 }
 
 .twoThrids {
@@ -19,4 +20,18 @@
     max-height: 300px;
     margin-left: 3%;
     margin-top: -30px;
+}
+
+/* responsive layout css  */
+
+@media screen and (max-width: 980px) {
+    .oneThrid { 
+        width: 100%;
+    }
+
+    .twoThrids {
+        margin-left: 5%;
+        width: 90%; 
+        margin-top: 0px;
+    }
 }
