attemping to make full size background image

--- a/weatherapp/src/styles/body.css
+++ b/weatherapp/src/styles/body.css
@@ -31,7 +31,6 @@ img {
     width: 150px;
     height: 150px;
 }
-
  
 .uv {
     padding:7px;
@@ -49,4 +48,9 @@ img {
 
 .high {
     background-color: rgb(231, 35, 35);
+}
+
+.move {
+    margin-top: 40px;
+    background-color: blue;
 }
