--- a/weatherapp/src/styles/style.css
+++ b/weatherapp/src/styles/style.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     font-family: 'Franklin Gothic Medium', sans-serif;
+    height: 100%;
+
 }
 
 .header {
@@ -11,4 +13,11 @@ body {
     text-align: center;
     position: relative;
     top: -21px;
+}
+
+.bg {
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
