--- a/weatherapp/src/styles/alignment.css
+++ b/weatherapp/src/styles/alignment.css
@@ -16,13 +16,23 @@
 
 .twoThrids {
     flex-wrap: wrap;
-    width: 66%;
-    max-height: 300px;
-    margin-left: 3%;
+    padding-left: 1.7%;
+    width: 71%;
     margin-top: -30px;
 }
 
 /* responsive layout css  */
+
+@media screen and (max-width: 1400px) {
+    .oneThrid { 
+        width: 24%;
+    }
+
+    .twoThrid { 
+        width: 51%;
+        padding-left: 2%;
+    }
+}
 
 @media screen and (max-width: 980px) {
     .oneThrid { 
@@ -30,8 +40,7 @@
     }
 
     .twoThrids {
-        margin-left: 5%;
-        width: 90%; 
-        margin-top: 0px;
+        width: 100%; 
+        margin-top: 10px;
     }
 }
