--- a/weatherapp/src/styles/body.css
+++ b/weatherapp/src/styles/body.css
@@ -82,9 +82,16 @@ img {
         width: 94%;
     }
 
+    .infoBox {
+        width: 50%;
+        display: inline-block;
+    }
+
     .centerImg {
         width: 40%;
-        margin-top: 15px;
+        text-align: left;
+        display: inline;
+        float: right;
     }
     
     .smallerImg {
@@ -94,7 +101,7 @@ img {
 }
 
 .centerImg {
-    margin-left: 20%;
+    text-align: center;
 }
 
 .smallerImg{
